styles for header

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,2 +1,10 @@
 $header-height: 34px;
 $border_color: #c0c0c0;
+
+// Toolbar
+$toolbar-height: 40px;
+
+// formula
+$formula-height: 24px;
+
+$info-cell-width: 40px;
