--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -12,7 +12,7 @@
   display: flex;
   justify-content: space-between;
 
-  background: pink;
+  // background: pink;
 
   & .input {
     color: #000;
@@ -20,7 +20,7 @@
     border: 2px solid transparent;
     border-radius: 2px;
     height: 20px;
-    font-size: 20px;
+    font-size: 16px;
     line-height: 22px;
     outline: none;
     min-width: 10px;
