--- a/src/scss/toolbar.scss
+++ b/src/scss/toolbar.scss
@@ -2,4 +2,20 @@
 @import 'mixins';
 
 
-.exel__toolbar {}
+.exel__toolbar {
+  position: absolute;
+  height: $toolbar-height;
+  // background: rosybrown;
+
+  left: 0;
+  right: 0;
+  top: $header-height;
+  border-top: 1px solid $border-color;
+  border-bottom: 1px solid $border-color;
+  padding: 7px 10px;
+  display: flex;
+
+  .button {
+    @include button(green);
+  }
+}
