--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,6 +1,5 @@
 $header-height: 34px;
 $border_color: #c0c0c0;
-
 // Toolbar
 $toolbar-height: 40px;
 
@@ -8,3 +7,10 @@ $toolbar-height: 40px;
 $formula-height: 24px;
 
 $info-cell-width: 40px;
+
+// Table
+$row-height: 24px;
+$column-cell-width: 120px;
+
+// DB
+$db-header-height: 64px;
