--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,5 +1,7 @@
 @import "~normalize.css";
 
+@import 'dashboard';
+
 @import "header";
 @import 'toolbar';
 @import 'formula';
@@ -19,5 +21,8 @@ body {
 
 .exel {
   position: relative;
-  color: #888
+  color: #888;
+  height: 100%;
+  min-width: 100%;
+  font-size: 0.8rem;
 }
